--- a/notebooks/03_categorical_pipeline_sol_02.ipynb
+++ b/notebooks/03_categorical_pipeline_sol_02.ipynb
@@ -2,9 +2,10 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "84922afd",
    "metadata": {},
    "source": [
-    "# \ud83d\udcc3 Solution for Exercise M1.05\n",
+    "# 📃 Solution for Exercise M1.05\n",
     "\n",
     "The goal of this exercise is to evaluate the impact of feature preprocessing\n",
     "on a pipeline that uses a decision-tree-based classifier instead of a logistic\n",
@@ -20,6 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "3edd68f1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,6 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "3457a79e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,6 +44,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e3102fe0",
    "metadata": {},
    "source": [
     "As in the previous notebooks, we use the utility `make_column_selector`\n",
@@ -51,6 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "4d6764ce",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,6 +69,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "cdde6a6a",
    "metadata": {},
    "source": [
     "## Reference pipeline (no numerical scaling and integer-coded categories)\n",
@@ -75,6 +81,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "8e35821e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,12 +108,13 @@
     "scores = cv_results[\"test_score\"]\n",
     "\n",
     "print(\"The mean cross-validation accuracy is: \"\n",
-    "      f\"{scores.mean():.3f} \u00b1 {scores.std():.3f} \"\n",
+    "      f\"{scores.mean():.3f} ± {scores.std():.3f} \"\n",
     "      f\"with a fitting time of {elapsed_time:.3f}\")"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "9dc7568d",
    "metadata": {},
    "source": [
     "## Scaling numerical features\n",
@@ -118,6 +126,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "f1382eb8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,12 +150,13 @@
     "scores = cv_results[\"test_score\"]\n",
     "\n",
     "print(\"The mean cross-validation accuracy is: \"\n",
-    "      f\"{scores.mean():.3f} \u00b1 {scores.std():.3f} \"\n",
+    "      f\"{scores.mean():.3f} ± {scores.std():.3f} \"\n",
     "      f\"with a fitting time of {elapsed_time:.3f}\")"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "b5572911",
    "metadata": {
     "tags": [
      "solution"
@@ -165,6 +175,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1b67a475",
    "metadata": {},
    "source": [
     "## One-hot encoding of categorical variables\n",
@@ -185,6 +196,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "41701df4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,12 +219,13 @@
     "scores = cv_results[\"test_score\"]\n",
     "\n",
     "print(\"The mean cross-validation accuracy is: \"\n",
-    "      f\"{scores.mean():.3f} \u00b1 {scores.std():.3f} \"\n",
+    "      f\"{scores.mean():.3f} ± {scores.std():.3f} \"\n",
     "      f\"with a fitting time of {elapsed_time:.3f}\")"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "d0069a03",
    "metadata": {
     "tags": [
      "solution"
@@ -241,6 +254,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "dacded0b",
    "metadata": {
     "tags": [
      "solution"
@@ -285,8 +299,21 @@
    "main_language": "python"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
