--- a/notebooks/ensemble_introduction.ipynb
+++ b/notebooks/ensemble_introduction.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "e20bca47",
    "metadata": {},
    "source": [
     "# Introductory example to ensemble models\n",
@@ -17,6 +18,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "0bb306c8",
    "metadata": {},
    "source": [
     "<div class=\"admonition note alert alert-info\">\n",
@@ -28,7 +30,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
+   "id": "f3654b28",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,6 +43,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c777e61e",
    "metadata": {},
    "source": [
     "We will check the generalization performance of decision tree regressor with\n",
@@ -48,9 +52,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
+   "id": "17844f97",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "R2 score obtained by cross-validation: 0.354 ± 0.087\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.model_selection import cross_validate\n",
     "from sklearn.tree import DecisionTreeRegressor\n",
@@ -60,11 +73,12 @@
     "scores = cv_results[\"test_score\"]\n",
     "\n",
     "print(f\"R2 score obtained by cross-validation: \"\n",
-    "      f\"{scores.mean():.3f} \u00b1 {scores.std():.3f}\")"
+    "      f\"{scores.mean():.3f} ± {scores.std():.3f}\")"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "959fa212",
    "metadata": {},
    "source": [
     "We obtain fair results. However, as we previously presented in the \"tree in\n",
@@ -85,9 +99,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
+   "id": "486d8505",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "R2 score obtained by cross-validation: 0.523 ± 0.107\n",
+      "CPU times: user 19.1 ms, sys: 0 ns, total: 19.1 ms\n",
+      "Wall time: 8.89 s\n"
+     ]
+    }
+   ],
    "source": [
     "%%time\n",
     "from sklearn.model_selection import GridSearchCV\n",
@@ -106,11 +131,12 @@
     "scores = cv_results[\"test_score\"]\n",
     "\n",
     "print(f\"R2 score obtained by cross-validation: \"\n",
-    "      f\"{scores.mean():.3f} \u00b1 {scores.std():.3f}\")"
+    "      f\"{scores.mean():.3f} ± {scores.std():.3f}\")"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "228190d3",
    "metadata": {},
    "source": [
     "We see that optimizing the hyperparameters will have a positive effect\n",
@@ -120,6 +146,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ad086493",
    "metadata": {},
    "source": [
     "We can create a dataframe storing the important information collected during\n",
@@ -138,9 +165,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
+   "id": "fa7899ca",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "R2 score obtained by cross-validation: 0.642 ± 0.083\n",
+      "CPU times: user 54.1 ms, sys: 73.6 ms, total: 128 ms\n",
+      "Wall time: 4.3 s\n"
+     ]
+    }
+   ],
    "source": [
     "%%time\n",
     "from sklearn.ensemble import BaggingRegressor\n",
@@ -149,15 +187,16 @@
     "bagging_regressor = BaggingRegressor(\n",
     "    estimator=estimator, n_estimators=20, random_state=0)\n",
     "\n",
-    "cv_results = cross_validate(bagging_regressor, data, target, n_jobs=2)\n",
+    "cv_results = cross_validate(bagging_regressor, data, target, n_jobs=8)\n",
     "scores = cv_results[\"test_score\"]\n",
     "\n",
     "print(f\"R2 score obtained by cross-validation: \"\n",
-    "      f\"{scores.mean():.3f} \u00b1 {scores.std():.3f}\")"
+    "      f\"{scores.mean():.3f} ± {scores.std():.3f}\")"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "4a18c0dd",
    "metadata": {},
    "source": [
     "Without searching for optimal hyperparameters, the overall generalization\n",
@@ -183,8 +222,21 @@
    "main_language": "python"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
