--- a/notebooks/ensemble_ex_01.ipynb
+++ b/notebooks/ensemble_ex_01.ipynb
@@ -2,9 +2,10 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "33185157",
    "metadata": {},
    "source": [
-    "# \ud83d\udcdd Exercise M6.01\n",
+    "# 📝 Exercise M6.01\n",
     "\n",
     "The aim of this notebook is to investigate if we can tune the hyperparameters\n",
     "of a bagging regressor and evaluate the gain obtained.\n",
@@ -16,6 +17,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "a90cf3a3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,6 +32,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "69d20289",
    "metadata": {},
    "source": [
     "<div class=\"admonition note alert alert-info\">\n",
@@ -41,6 +44,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "4b7cf964",
    "metadata": {},
    "source": [
     "Create a `BaggingRegressor` and provide a `DecisionTreeRegressor`\n",
@@ -51,6 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "d5ee472e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,6 +64,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "5163e191",
    "metadata": {},
    "source": [
     "Now, create a `RandomizedSearchCV` instance using the previous model and\n",
@@ -77,6 +83,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "56bc28e0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,8 +97,21 @@
    "main_language": "python"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
