learning ensemple techniques

--- a/notebooks/ensemble_random_forest-typealong.ipynb
+++ b/notebooks/ensemble_random_forest-typealong.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "7df2bf7d",
+   "id": "361af1de",
    "metadata": {},
    "source": [
     "# Random forests\n",
@@ -35,22 +35,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "017d34f5",
+   "execution_count": 1,
+   "id": "3f70fc95",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
-    "adult_census = pd.read_csv(\"../datasets/adult-census.csv\")\n",
-    "target_name = \"class\"\n",
-    "data = adult_census.drop(columns=[target_name, \"education-num\"])\n",
+    "adult_census = pd.read_csv('../datasets/adult-census.csv')\n",
+    "target_name = 'class'\n",
+    "data = adult_census.drop(columns=[target_name, 'education-num'])\n",
     "target = adult_census[target_name]"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "d301d1a8",
+   "id": "b21402d0",
    "metadata": {},
    "source": [
     "<div class=\"admonition note alert alert-info\">\n",
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "770977a1",
+   "id": "752ce740",
    "metadata": {},
    "source": [
     "\n",
@@ -80,8 +80,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "c2cdeab4",
+   "execution_count": 2,
+   "id": "946b89c4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,17 +89,17 @@
     "from sklearn.compose import make_column_transformer, make_column_selector\n",
     "\n",
     "categorical_encoder = OrdinalEncoder(\n",
-    "    handle_unknown=\"use_encoded_value\", unknown_value=-1\n",
+    "    handle_unknown='use_encoded_value', unknown_value=-1\n",
     ")\n",
     "preprocessor = make_column_transformer(\n",
     "    (categorical_encoder, make_column_selector(dtype_include=object)),\n",
-    "    remainder=\"passthrough\"\n",
+    "    remainder='passthrough'\n",
     ")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "33ea2c71",
+   "id": "e19f1efa",
    "metadata": {},
    "source": [
     "\n",
@@ -109,8 +109,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "b43ffef3",
+   "execution_count": 3,
+   "id": "c63dfe94",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,22 +122,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "41ba44a9",
+   "execution_count": 4,
+   "id": "fc35c644",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Decision tree classifier: 0.820 ± 0.006\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.model_selection import cross_val_score\n",
     "\n",
     "scores_tree = cross_val_score(tree, data, target)\n",
     "\n",
-    "print(f\"Decision tree classifier: \"\n",
-    "      f\"{scores_tree.mean():.3f} ± {scores_tree.std():.3f}\")"
+    "print(f'Decision tree classifier: '\n",
+    "      f'{scores_tree.mean():.3f} ± {scores_tree.std():.3f}')"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "35516285",
+   "id": "61691ae7",
    "metadata": {},
    "source": [
     "\n",
@@ -149,38 +157,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "568983d5",
+   "execution_count": 6,
+   "id": "803703a7",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# construct a BaggigClassifier\n",
     "from sklearn.ensemble import BaggingClassifier\n",
     "\n",
     "bagged_trees = make_pipeline(\n",
     "    preprocessor,\n",
     "    BaggingClassifier(\n",
     "        estimator=DecisionTreeClassifier(random_state=0),\n",
-    "        n_estimators=50, n_jobs=2, random_state=0,\n",
+    "        n_estimators=50, n_jobs=4, random_state=0\n",
     "    )\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "b2f30702",
+   "execution_count": 7,
+   "id": "fd7c8c0e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bagged decision tree classifierL 0.846 ± 0.005\n"
+     ]
+    }
+   ],
    "source": [
     "scores_bagged_trees = cross_val_score(bagged_trees, data, target)\n",
     "\n",
-    "print(f\"Bagged decision tree classifier: \"\n",
-    "      f\"{scores_bagged_trees.mean():.3f} ± {scores_bagged_trees.std():.3f}\")"
+    "print(f'Bagged decision tree classifierL '\n",
+    "      f'{scores_bagged_trees.mean():.3f} ± {scores_bagged_trees.std():.3f}')"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "1819b22b",
+   "id": "49f6fe0c",
    "metadata": {},
    "source": [
     "\n",
@@ -194,8 +211,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "b199aab6",
+   "execution_count": 8,
+   "id": "2ebb625b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,27 +220,35 @@
     "\n",
     "random_forest = make_pipeline(\n",
     "    preprocessor,\n",
-    "    RandomForestClassifier(n_estimators=50, n_jobs=2, random_state=0)\n",
+    "    RandomForestClassifier(n_estimators=50, n_jobs=4, random_state=0)\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "9f8ebbaa",
+   "execution_count": 9,
+   "id": "ca1eb113",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Random forest classifier: 0.851 ± 0.004\n"
+     ]
+    }
+   ],
    "source": [
     "scores_random_forest = cross_val_score(random_forest, data, target)\n",
     "\n",
-    "print(f\"Random forest classifier: \"\n",
-    "      f\"{scores_random_forest.mean():.3f} ± \"\n",
-    "      f\"{scores_random_forest.std():.3f}\")"
+    "print(f'Random forest classifier: '\n",
+    "      f'{scores_random_forest.mean():.3f} ± '\n",
+    "      f'{scores_random_forest.std():.3f}')"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "e0f6f3ed",
+   "id": "a69cffea",
    "metadata": {},
    "source": [
     "\n",
