--- a/notebooks/ensemble_sol_01.ipynb
+++ b/notebooks/ensemble_sol_01.ipynb
@@ -2,9 +2,10 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "4a96ba27",
    "metadata": {},
    "source": [
-    "# \ud83d\udcc3 Solution for Exercise M6.01\n",
+    "# 📃 Solution for Exercise M6.01\n",
     "\n",
     "The aim of this notebook is to investigate if we can tune the hyperparameters\n",
     "of a bagging regressor and evaluate the gain obtained.\n",
@@ -15,7 +16,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
+   "id": "2bfdb449",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,6 +32,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "192ede13",
    "metadata": {},
    "source": [
     "<div class=\"admonition note alert alert-info\">\n",
@@ -41,6 +44,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f65598bd",
    "metadata": {},
    "source": [
     "Create a `BaggingRegressor` and provide a `DecisionTreeRegressor`\n",
@@ -50,9 +54,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
+   "id": "d0a03913",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Basic mean absolute error of the bagging regressor:\n",
+      "36.39 k$\n"
+     ]
+    }
+   ],
    "source": [
     "# solution\n",
     "from sklearn.metrics import mean_absolute_error\n",
@@ -69,6 +83,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f11eeef9",
    "metadata": {},
    "source": [
     "Now, create a `RandomizedSearchCV` instance using the previous model and\n",
@@ -86,9 +101,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
+   "id": "9c3dfa1d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "base_estimator\n",
+      "bootstrap\n",
+      "bootstrap_features\n",
+      "estimator__ccp_alpha\n",
+      "estimator__criterion\n",
+      "estimator__max_depth\n",
+      "estimator__max_features\n",
+      "estimator__max_leaf_nodes\n",
+      "estimator__min_impurity_decrease\n",
+      "estimator__min_samples_leaf\n",
+      "estimator__min_samples_split\n",
+      "estimator__min_weight_fraction_leaf\n",
+      "estimator__random_state\n",
+      "estimator__splitter\n",
+      "estimator\n",
+      "max_features\n",
+      "max_samples\n",
+      "n_estimators\n",
+      "n_jobs\n",
+      "oob_score\n",
+      "random_state\n",
+      "verbose\n",
+      "warm_start\n"
+     ]
+    }
+   ],
    "source": [
     "# solution\n",
     "for param in bagging.get_params().keys():\n",
@@ -97,7 +143,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
+   "id": "39e90b78",
    "metadata": {
     "tags": [
      "solution"
@@ -122,13 +169,279 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
+   "id": "b2f34880",
    "metadata": {
     "tags": [
      "solution"
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>param_n_estimators</th>\n",
+       "      <th>param_max_samples</th>\n",
+       "      <th>param_max_features</th>\n",
+       "      <th>param_estimator__max_depth</th>\n",
+       "      <th>mean_test_error</th>\n",
+       "      <th>std_test_error</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>24</td>\n",
+       "      <td>0.8</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>9</td>\n",
+       "      <td>39.137912</td>\n",
+       "      <td>1.386035</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>13</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>9</td>\n",
+       "      <td>40.000640</td>\n",
+       "      <td>1.127054</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>11</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>9</td>\n",
+       "      <td>40.323568</td>\n",
+       "      <td>1.220970</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>22</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>7</td>\n",
+       "      <td>42.787667</td>\n",
+       "      <td>1.136927</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>25</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>9</td>\n",
+       "      <td>42.846716</td>\n",
+       "      <td>1.788507</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>19</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>7</td>\n",
+       "      <td>43.065121</td>\n",
+       "      <td>1.411277</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>13</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>6</td>\n",
+       "      <td>48.205868</td>\n",
+       "      <td>1.442949</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>24</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>6</td>\n",
+       "      <td>48.505430</td>\n",
+       "      <td>0.798961</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>25</td>\n",
+       "      <td>0.8</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>6</td>\n",
+       "      <td>49.725802</td>\n",
+       "      <td>1.231791</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>27</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>52.496521</td>\n",
+       "      <td>1.001255</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>27</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>52.525176</td>\n",
+       "      <td>1.699074</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>28</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>52.856991</td>\n",
+       "      <td>1.111905</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>19</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>53.937137</td>\n",
+       "      <td>1.418501</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>25</td>\n",
+       "      <td>0.8</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>4</td>\n",
+       "      <td>54.878028</td>\n",
+       "      <td>1.154824</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>28</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>56.619057</td>\n",
+       "      <td>1.097167</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>16</td>\n",
+       "      <td>0.8</td>\n",
+       "      <td>0.8</td>\n",
+       "      <td>3</td>\n",
+       "      <td>56.921028</td>\n",
+       "      <td>1.235317</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>28</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.8</td>\n",
+       "      <td>3</td>\n",
+       "      <td>57.118057</td>\n",
+       "      <td>0.656078</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>29</td>\n",
+       "      <td>0.8</td>\n",
+       "      <td>0.8</td>\n",
+       "      <td>3</td>\n",
+       "      <td>57.746855</td>\n",
+       "      <td>0.914028</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>11</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>3</td>\n",
+       "      <td>59.717271</td>\n",
+       "      <td>2.169154</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>14</td>\n",
+       "      <td>0.8</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>3</td>\n",
+       "      <td>61.980737</td>\n",
+       "      <td>2.066342</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   param_n_estimators param_max_samples param_max_features  \\\n",
+       "16                 24               0.8                1.0   \n",
+       "2                  13               0.5                1.0   \n",
+       "5                  11               0.5                1.0   \n",
+       "15                 22               0.5                1.0   \n",
+       "13                 25               1.0                0.5   \n",
+       "1                  19               1.0                1.0   \n",
+       "10                 13               0.5                0.5   \n",
+       "4                  24               0.5                0.5   \n",
+       "0                  25               0.8                0.5   \n",
+       "18                 27               1.0                0.5   \n",
+       "17                 27               0.5                0.5   \n",
+       "19                 28               0.5                0.5   \n",
+       "12                 19               0.5                0.5   \n",
+       "14                 25               0.8                0.5   \n",
+       "8                  28               1.0                1.0   \n",
+       "11                 16               0.8                0.8   \n",
+       "9                  28               1.0                0.8   \n",
+       "3                  29               0.8                0.8   \n",
+       "6                  11               1.0                0.5   \n",
+       "7                  14               0.8                0.5   \n",
+       "\n",
+       "   param_estimator__max_depth  mean_test_error  std_test_error  \n",
+       "16                          9        39.137912        1.386035  \n",
+       "2                           9        40.000640        1.127054  \n",
+       "5                           9        40.323568        1.220970  \n",
+       "15                          7        42.787667        1.136927  \n",
+       "13                          9        42.846716        1.788507  \n",
+       "1                           7        43.065121        1.411277  \n",
+       "10                          6        48.205868        1.442949  \n",
+       "4                           6        48.505430        0.798961  \n",
+       "0                           6        49.725802        1.231791  \n",
+       "18                          5        52.496521        1.001255  \n",
+       "17                          5        52.525176        1.699074  \n",
+       "19                          5        52.856991        1.111905  \n",
+       "12                          5        53.937137        1.418501  \n",
+       "14                          4        54.878028        1.154824  \n",
+       "8                           3        56.619057        1.097167  \n",
+       "11                          3        56.921028        1.235317  \n",
+       "9                           3        57.118057        0.656078  \n",
+       "3                           3        57.746855        0.914028  \n",
+       "6                           3        59.717271        2.169154  \n",
+       "7                           3        61.980737        2.066342  "
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "\n",
@@ -142,13 +455,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
+   "id": "a0b4e8d2",
    "metadata": {
     "tags": [
      "solution"
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean absolute error after tuning of the bagging regressor:\n",
+      "39.31 k$\n"
+     ]
+    }
+   ],
    "source": [
     "target_predicted = search.predict(data_test)\n",
     "print(f\"Mean absolute error after tuning of the bagging regressor:\\n\"\n",
@@ -157,6 +480,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "0af8286c",
    "metadata": {
     "tags": [
      "solution"
@@ -173,8 +497,21 @@
    "main_language": "python"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
