--- a/notebooks/ensemble_ex_01.ipynb
+++ b/notebooks/ensemble_ex_01.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "a90cf3a3",
    "metadata": {},
    "outputs": [],
@@ -54,12 +54,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "d5ee472e",
+   "execution_count": 60,
+   "id": "8366335e-3b52-4f0e-9fdb-d095bd167ffd",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Write your code here."
+    "from sklearn.ensemble import BaggingRegressor\n",
+    "from sklearn.tree import DecisionTreeRegressor\n",
+    "import numpy as np\n",
+    "\n",
+    "from sklearn.metrics import mean_absolute_error"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "dbec3690-1e46-431d-8998-33f1e0e99af3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "36.69490981589148"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Creating a BaggigRegressor\n",
+    "estimator = DecisionTreeRegressor(random_state=0)\n",
+    "baggign_regressor = BaggingRegressor(\n",
+    "    estimator=estimator,\n",
+    "    #n_estimators=100,\n",
+    "    random_state=0\n",
+    ")\n",
+    "\n",
+    "# train the regressor\n",
+    "_ = baggign_regressor.fit(data_train, target_train)\n",
+    "\n",
+    "target_predict = baggign_regressor.predict(data_test)\n",
+    "# evaluate generalization perforance using mae\n",
+    "np.mean(np.abs(target_predict - target_test.to_numpy()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "2a2e5962-e34a-475a-b457-5bbff4362d24",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Basic mean absolute error of the bagging regressor:\n",
+      "36.69 k$\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Basic mean absolute error of the bagging regressor:\\n\"\n",
+    "      f\"{mean_absolute_error(target_test, target_predict):.2f} k$\")"
    ]
   },
   {
@@ -82,13 +140,407 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
+   "id": "e3da9767-e8dd-415f-ae3f-973fd36a70e3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "base_estimator\n",
+      "bootstrap\n",
+      "bootstrap_features\n",
+      "estimator__ccp_alpha\n",
+      "estimator__criterion\n",
+      "estimator__max_depth\n",
+      "estimator__max_features\n",
+      "estimator__max_leaf_nodes\n",
+      "estimator__min_impurity_decrease\n",
+      "estimator__min_samples_leaf\n",
+      "estimator__min_samples_split\n",
+      "estimator__min_weight_fraction_leaf\n",
+      "estimator__random_state\n",
+      "estimator__splitter\n",
+      "estimator\n",
+      "max_features\n",
+      "max_samples\n",
+      "n_estimators\n",
+      "n_jobs\n",
+      "oob_score\n",
+      "random_state\n",
+      "verbose\n",
+      "warm_start\n"
+     ]
+    }
+   ],
+   "source": [
+    "# solution: see what parabemters can be tuned\n",
+    "for param in baggign_regressor.get_params().keys():\n",
+    "    print(param)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
    "id": "56bc28e0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Write your code here."
+    "from sklearn.model_selection import RandomizedSearchCV\n",
+    "from scipy.stats import randint"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "id": "dcf28721-1b63-4d1e-88e6-cf88e881d509",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "39.59224907939918"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "param_grid = {\n",
+    "    'n_estimators': randint(10, 100),\n",
+    "    'max_samples': [0.5, 0.8, 1.0],\n",
+    "    'max_features': [0.5, 0.8, 1.0],\n",
+    "    'estimator__max_depth': randint(3, 10)\n",
+    "}\n",
+    "cv = 10\n",
+    "\n",
+    "tree = RandomizedSearchCV(\n",
+    "    baggign_regressor, \n",
+    "    param_distributions=param_grid, n_iter=20, scoring='neg_mean_absolute_error',\n",
+    "    cv=cv, n_jobs=4, return_train_score=True)\n",
+    "\n",
+    "_ = tree.fit(data_train, target_train)\n",
+    "\n",
+    "\n",
+    "target_predict = tree.predict(data_test)\n",
+    "# evaluate generalization perforance using mae\n",
+    "np.mean(np.abs(target_predict - target_test.to_numpy()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "id": "b94536e5-0965-46cb-bf57-042b6e5a9fd4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>param_n_estimators</th>\n",
+       "      <th>param_max_samples</th>\n",
+       "      <th>param_max_features</th>\n",
+       "      <th>param_estimator__max_depth</th>\n",
+       "      <th>mean_test_error</th>\n",
+       "      <th>std_test_error</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>62</td>\n",
+       "      <td>0.8</td>\n",
+       "      <td>0.8</td>\n",
+       "      <td>8</td>\n",
+       "      <td>39.593619</td>\n",
+       "      <td>1.397274</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>13</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.8</td>\n",
+       "      <td>9</td>\n",
+       "      <td>39.998971</td>\n",
+       "      <td>1.359944</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>83</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>9</td>\n",
+       "      <td>43.585736</td>\n",
+       "      <td>1.082776</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>81</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>6</td>\n",
+       "      <td>44.769777</td>\n",
+       "      <td>1.482435</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>41</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>6</td>\n",
+       "      <td>44.836071</td>\n",
+       "      <td>1.406291</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>75</td>\n",
+       "      <td>0.8</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>6</td>\n",
+       "      <td>45.005132</td>\n",
+       "      <td>1.539216</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>39</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>8</td>\n",
+       "      <td>45.249322</td>\n",
+       "      <td>1.127040</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>10</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>6</td>\n",
+       "      <td>45.299900</td>\n",
+       "      <td>1.475842</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>74</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.8</td>\n",
+       "      <td>5</td>\n",
+       "      <td>47.512311</td>\n",
+       "      <td>1.281349</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>95</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>47.534731</td>\n",
+       "      <td>1.506151</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>79</td>\n",
+       "      <td>0.8</td>\n",
+       "      <td>0.8</td>\n",
+       "      <td>5</td>\n",
+       "      <td>47.714094</td>\n",
+       "      <td>1.341109</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>78</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>6</td>\n",
+       "      <td>48.240705</td>\n",
+       "      <td>1.084224</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>63</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>6</td>\n",
+       "      <td>48.725572</td>\n",
+       "      <td>1.009871</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>64</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.8</td>\n",
+       "      <td>4</td>\n",
+       "      <td>51.491731</td>\n",
+       "      <td>1.208878</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>49</td>\n",
+       "      <td>0.8</td>\n",
+       "      <td>0.8</td>\n",
+       "      <td>4</td>\n",
+       "      <td>51.576643</td>\n",
+       "      <td>1.321678</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>11</td>\n",
+       "      <td>0.8</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>51.798208</td>\n",
+       "      <td>1.438942</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>84</td>\n",
+       "      <td>0.8</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>4</td>\n",
+       "      <td>55.035512</td>\n",
+       "      <td>1.104833</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>99</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>56.704738</td>\n",
+       "      <td>1.725696</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>92</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>56.716667</td>\n",
+       "      <td>1.728082</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>11</td>\n",
+       "      <td>0.8</td>\n",
+       "      <td>0.8</td>\n",
+       "      <td>3</td>\n",
+       "      <td>56.947650</td>\n",
+       "      <td>1.478690</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   param_n_estimators param_max_samples param_max_features  \\\n",
+       "19                 62               0.8                0.8   \n",
+       "16                 13               0.5                0.8   \n",
+       "8                  83               0.5                0.5   \n",
+       "7                  81               0.5                1.0   \n",
+       "10                 41               0.5                1.0   \n",
+       "0                  75               0.8                1.0   \n",
+       "17                 39               0.5                0.5   \n",
+       "18                 10               0.5                1.0   \n",
+       "12                 74               0.5                0.8   \n",
+       "13                 95               0.5                1.0   \n",
+       "3                  79               0.8                0.8   \n",
+       "5                  78               1.0                0.5   \n",
+       "15                 63               1.0                0.5   \n",
+       "2                  64               0.5                0.8   \n",
+       "11                 49               0.8                0.8   \n",
+       "4                  11               0.8                1.0   \n",
+       "9                  84               0.8                0.5   \n",
+       "1                  99               1.0                1.0   \n",
+       "14                 92               1.0                1.0   \n",
+       "6                  11               0.8                0.8   \n",
+       "\n",
+       "   param_estimator__max_depth  mean_test_error  std_test_error  \n",
+       "19                          8        39.593619        1.397274  \n",
+       "16                          9        39.998971        1.359944  \n",
+       "8                           9        43.585736        1.082776  \n",
+       "7                           6        44.769777        1.482435  \n",
+       "10                          6        44.836071        1.406291  \n",
+       "0                           6        45.005132        1.539216  \n",
+       "17                          8        45.249322        1.127040  \n",
+       "18                          6        45.299900        1.475842  \n",
+       "12                          5        47.512311        1.281349  \n",
+       "13                          5        47.534731        1.506151  \n",
+       "3                           5        47.714094        1.341109  \n",
+       "5                           6        48.240705        1.084224  \n",
+       "15                          6        48.725572        1.009871  \n",
+       "2                           4        51.491731        1.208878  \n",
+       "11                          4        51.576643        1.321678  \n",
+       "4                           4        51.798208        1.438942  \n",
+       "9                           4        55.035512        1.104833  \n",
+       "1                           3        56.704738        1.725696  \n",
+       "14                          3        56.716667        1.728082  \n",
+       "6                           3        56.947650        1.478690  "
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "columns = [f'param_{name}' for name in param_grid.keys()]\n",
+    "columns += ['mean_test_error', 'std_test_error']\n",
+    "\n",
+    "cv_results = pd.DataFrame(tree.cv_results_)\n",
+    "cv_results['mean_test_error'] = -cv_results['mean_test_score']\n",
+    "cv_results['std_test_error'] = cv_results['std_test_score']\n",
+    "cv_results[columns].sort_values(by='mean_test_error')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "id": "354f5861-ecb8-4e31-8140-04b0f29a6c68",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean absolute error after tuning of the bagging regressor:\n",
+      "39.59 k$\n"
+     ]
+    }
+   ],
+   "source": [
+    "target_predicted = tree.predict(data_test)\n",
+    "print(f\"Mean absolute error after tuning of the bagging regressor:\\n\"\n",
+    "      f\"{mean_absolute_error(target_test, target_predicted):.2f} k$\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e36bb249-0e1f-44f3-93d0-400919aeaebe",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
