--- a/notebooks/ensemble_ex_03.ipynb
+++ b/notebooks/ensemble_ex_03.ipynb
@@ -2,9 +2,10 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "9442af32",
    "metadata": {},
    "source": [
-    "# \ud83d\udcdd Exercise M6.03\n",
+    "# 📝 Exercise M6.03\n",
     "\n",
     "The aim of this exercise is to:\n",
     "\n",
@@ -19,6 +20,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "1186d574",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,6 +35,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ad283326",
    "metadata": {},
    "source": [
     "<div class=\"admonition note alert alert-info\">\n",
@@ -44,6 +47,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c54bc93e",
    "metadata": {},
    "source": [
     "Create a gradient boosting decision tree with `max_depth=5` and\n",
@@ -53,6 +57,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "ec1f958f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,6 +66,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e2dd58b3",
    "metadata": {},
    "source": [
     "\n",
@@ -70,6 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "ef5c19ea",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,6 +85,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "0de1431a",
    "metadata": {},
    "source": [
     "\n",
@@ -90,6 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "f67344a6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,6 +107,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "af7c3255",
    "metadata": {},
    "source": [
     "Both gradient boosting and random forest models will always improve when\n",
@@ -119,6 +129,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "5d6219cb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,6 +138,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "0fa36fb4",
    "metadata": {},
    "source": [
     "Estimate the generalization performance of this model again using\n",
@@ -139,6 +151,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "44edbeed",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,8 +165,21 @@
    "main_language": "python"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
