--- a/notebooks/02_numerical_pipeline_hands_on.ipynb
+++ b/notebooks/02_numerical_pipeline_hands_on.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "01b1aa19",
    "metadata": {},
    "source": [
     "# Working with numerical data\n",
@@ -32,6 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "2be73985",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,6 +47,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "cddc1f47",
    "metadata": {},
    "source": [
     "The next step separates the target from the data. We performed the same\n",
@@ -54,6 +57,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "0d2a5d3b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,6 +67,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "3bafd89e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,6 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "67ef327b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,6 +86,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "cc567388",
    "metadata": {},
    "source": [
     "<div class=\"admonition note alert alert-info\">\n",
@@ -92,6 +99,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "5271bfde",
    "metadata": {},
    "source": [
     "At this point, we can focus on the data we want to use to train our\n",
@@ -122,6 +130,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "5e419242",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,6 +139,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a59eae2b",
    "metadata": {},
    "source": [
     "We seem to have only two data types: `int64` and `object`. We can make\n",
@@ -139,6 +149,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "281dd072",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,6 +158,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "246b0f75",
    "metadata": {},
    "source": [
     "Indeed, the only two types in the dataset are integer `int64` and `object`.\n",
@@ -157,6 +169,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "31a2a916",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,6 +178,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b01fcb3b",
    "metadata": {},
    "source": [
     "We see that the `object` data type corresponds to columns containing strings.\n",
@@ -176,6 +190,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "92eb1390",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,6 +200,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8115e00b",
    "metadata": {},
    "source": [
     "Now that we limited the dataset to numerical columns only,\n",
@@ -199,6 +215,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "0b6258ee",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,6 +224,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f96be159",
    "metadata": {},
    "source": [
     "We can see the age varies between 17 and 90 years.\n",
@@ -221,6 +239,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "e8f16939",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,6 +248,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "2e28ff74",
    "metadata": {},
    "source": [
     "## Train-test split the dataset\n",
@@ -246,6 +266,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "e34b9b80",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,6 +278,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1c504fb0",
    "metadata": {},
    "source": [
     "<div class=\"admonition tip alert alert-warning\">\n",
@@ -270,6 +292,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e964ed63",
    "metadata": {},
    "source": [
     "When calling the function `train_test_split`, we specified that we would like\n",
@@ -281,6 +304,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "8fc3fb97",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,6 +316,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "d566d377",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -302,6 +327,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e3153a2f",
    "metadata": {},
    "source": [
     "In the previous notebook, we used a k-nearest neighbors model. While this\n",
@@ -330,6 +356,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "b5600488",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -340,6 +367,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "2ea76552",
    "metadata": {},
    "source": [
     "Now that the model has been created, you can use it exactly the same way as\n",
@@ -351,6 +379,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "bf5336fc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -359,6 +388,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1b3f203c",
    "metadata": {},
    "source": [
     "We can also use the `score` method to check the model generalization performance\n",
@@ -368,6 +398,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "4a1d05d7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -377,6 +408,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "78396423",
    "metadata": {},
    "source": [
     "## Notebook recap\n",
@@ -402,8 +434,21 @@
    "main_language": "python"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
