--- a/notebooks/parameter_tuning_randomized_search.ipynb
+++ b/notebooks/parameter_tuning_randomized_search.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "abaae44a",
    "metadata": {},
    "source": [
     "# Hyperparameter tuning by randomized-search\n",
@@ -20,6 +21,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "aae9431c",
    "metadata": {},
    "source": [
     "## Our predictive model\n",
@@ -30,6 +32,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "efec1c87",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,6 +43,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "419feb89",
    "metadata": {},
    "source": [
     "We extract the column containing the target."
@@ -48,6 +52,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "854782fb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,6 +63,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "6e528265",
    "metadata": {},
    "source": [
     "We drop from our data the target and the `\"education-num\"` column which\n",
@@ -67,6 +73,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "5e13d65a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,6 +83,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "55b5efe4",
    "metadata": {},
    "source": [
     "Once the dataset is loaded, we split it into a training and testing sets."
@@ -84,6 +92,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "4fbc873d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,6 +104,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "908bbc67",
    "metadata": {},
    "source": [
     "We will create the same predictive pipeline as seen in the grid-search\n",
@@ -104,6 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "0c008c5b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,6 +135,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "04c22cf4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,6 +152,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a68becac",
    "metadata": {},
    "source": [
     "## Tuning using a randomized-search\n",
@@ -204,6 +217,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "ea7a020f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,6 +236,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "3946f3ae",
    "metadata": {},
    "source": [
     "\n",
@@ -235,6 +250,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "beedceca",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,6 +274,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "49f27762",
    "metadata": {},
    "source": [
     "Then, we can compute the accuracy score on the test set."
@@ -266,6 +283,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "27040668",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,6 +296,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "00ad07cb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,6 +308,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b7566241",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -301,6 +321,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "3083eb2f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -325,6 +346,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "3dfa833c",
    "metadata": {},
    "source": [
     "Keep in mind that tuning is limited by the number of different combinations\n",
@@ -340,6 +362,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "c89343b3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -354,6 +377,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "0ef2bca9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -366,6 +390,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "87cd8077",
    "metadata": {},
    "source": [
     "In this case the top performing models have test scores with a high\n",
@@ -375,6 +400,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "29102277",
    "metadata": {},
    "source": [
     "\n",
@@ -395,8 +421,21 @@
    "main_language": "python"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
