studying wrap-up quiz 7 and datasets

--- a/notebooks/01_tabular_data_exploration.ipynb
+++ b/notebooks/01_tabular_data_exploration.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "7f449eb3",
    "metadata": {},
    "source": [
     "# First look at our dataset\n",
@@ -19,6 +20,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "69d1a543",
    "metadata": {},
    "source": [
     "## Loading the adult census dataset\n",
@@ -44,6 +46,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "2fa44555",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,6 +57,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "3e3b55a9",
    "metadata": {},
    "source": [
     "The goal with this data is to predict whether a person earns over 50K a year\n",
@@ -63,6 +67,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "6a6617dc",
    "metadata": {},
    "source": [
     "## The variables (columns) in the dataset\n",
@@ -83,6 +88,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "7d998df7",
    "metadata": {},
    "source": [
     "A quick way to inspect the dataframe is to show the first few lines with the\n",
@@ -92,6 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "0808d32f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,6 +107,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1e38150f",
    "metadata": {},
    "source": [
     "The column named **class** is our target variable (i.e., the variable which\n",
@@ -113,6 +121,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "b8e05671",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,6 +131,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "cd0be0bb",
    "metadata": {},
    "source": [
     "<div class=\"admonition note alert alert-info\">\n",
@@ -138,6 +148,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f2a33965",
    "metadata": {},
    "source": [
     "The dataset contains both numerical and categorical data. Numerical values\n",
@@ -148,6 +159,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "6923fced",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,6 +187,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ef7e04b9",
    "metadata": {},
    "source": [
     "We can check the number of samples and the number of columns available in the\n",
@@ -184,6 +197,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "d9e4d795",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,6 +209,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "42167a6b",
    "metadata": {},
    "source": [
     "We can compute the number of features by counting the number of columns and\n",
@@ -204,6 +219,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "5dc8fe93",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,6 +228,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f6feac3c",
    "metadata": {},
    "source": [
     "## Visual inspection of the data\n",
@@ -229,6 +246,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1a11f47d",
    "metadata": {},
    "source": [
     "Let's look at the distribution of individual features, to get some insights\n",
@@ -239,6 +257,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "cbfdc618",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,6 +266,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ba1723ba",
    "metadata": {},
    "source": [
     "<div class=\"admonition tip alert alert-warning\">\n",
@@ -272,6 +292,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "fe2d06a7",
    "metadata": {},
    "source": [
     "For categorical variables, we can look at the distribution of values:"
@@ -280,6 +301,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "8cdf42ec",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -288,6 +310,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a2bf2081",
    "metadata": {},
    "source": [
     "Note that the data collection process resulted in an important imbalance\n",
@@ -315,6 +338,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "6b07d2da",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -323,6 +347,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "58f9b32b",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -337,6 +362,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "61df3796",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -345,6 +371,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "2222c07e",
    "metadata": {},
    "source": [
     "For every entry in `\\\"education\\\"`, there is only one single corresponding\n",
@@ -357,6 +384,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e2c899ff",
    "metadata": {},
    "source": [
     "<div class=\"admonition note alert alert-info\">\n",
@@ -369,6 +397,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "faa02f40",
    "metadata": {},
    "source": [
     "Another way to inspect the data is to do a `pairplot` and show how each\n",
@@ -381,6 +410,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "1f117528",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -403,6 +433,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "7b58c245",
    "metadata": {},
    "source": [
     "## Creating decision rules by hand\n",
@@ -415,6 +446,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "44194e62",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -429,6 +461,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "0bb372a7",
    "metadata": {},
    "source": [
     "The data points (circles) show the distribution of `\"hours-per-week\"` and\n",
@@ -444,6 +477,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "422dbb17",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -470,6 +504,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "21ca7f9f",
    "metadata": {},
    "source": [
     "* In the region `age < 27` (left region) the prediction is low-income. Indeed,\n",
@@ -500,6 +535,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b658aa5b",
    "metadata": {},
    "source": [
     "## Notebook Recap\n",
@@ -530,8 +566,21 @@
    "main_language": "python"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
